test/ui/test/packages/faulty-component-paths/one/package.metadata
# TEST fail check

name: test,
version: "0.0.0",

components: {
    test: {
        type: library,
        path: "nonexistent.lushui",
    },
},
